<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/Profile_Fragment"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/Profile" />
    <item
        android:id="@+id/Exersise_Fragment"
        android:icon="@drawable/ic_baseline_directions_run_24"
        android:title="@string/exercise" />
    <item
        android:id="@+id/Explore"
        android:icon="@drawable/ic_baseline_explore_24"
        android:title="@string/Explore" />
    <item
        android:id="@+id/WorkOut"
        android:icon="@drawable/ic_baseline_fitness_center_24"
        android:title="@string/workout" />

    <item
        android:id="@+id/Progress"
        android:icon="@drawable/ic_baseline_self_improvement_24"
        android:title="@string/Progress" />
</menu>